# Pojedynki

./: .gitignore  CMakeLists.txt  Hospital.h  README.md  Second.h  Veteran.h  a.out  duel.cpp  duel.h  global.cpp  global.h  main.c  main.cpp  pojedynki.docx  secAnswer.cpp  secReadiness.cpp  sec_answer.cpp  sec_readiness.cpp  vetAnswer.cpp  vetChallenge.cpp  vetCritical.cpp  vetReadiness.cpp  vetResults.cpp  vet_answer.cpp  vet_challenge.cpp  vet_readiness.cpp  vet_results.cpp
~/root/: storage.json
~/root/Backups/: workspaces.json
~/root/CachedData/e18005f0f1b33c29e81d732535d8c0e47cafb0b5/: clone-74ebe600870f29bcad9f94954b50032e.code  index-4c36929c7c226bb4a755a2d8e68d47d7.code  main-b102866dbf51659445431d345dc6b12a.code  main.nls-9ab8ec7abf8b83826313d53950474d97.code  sqlite3-binding-6a941376640a842addfd0e6574f80e72.code
~/root/CachedData/e18005f0f1b33c29e81d732535d8c0e47cafb0b5/chrome/js/index-dir/: the-real-index
~/root/Crashpad/: client_id
~/root/GPUCache/: index
~/root/Local Storage/leveldb/: LOG
~/root/Session Storage/: LOG
~/root/User/globalStorage/: state.vscdb.backup
